chat: fix background z-index for 'select msg' mode

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1362,7 +1362,7 @@
                 [class *= 'message-'] { position: relative }
                 /// Selected messages.
                 /.qTFAl {
-                    z-index 0 i;
+                    z-index: 999 i;
                     /// Pseudo-background.
                     &::before {
                         content: '';
